nexter - start project

--- a/index.html
+++ b/index.html
@@ -4,21 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i"
+      rel="stylesheet"
+    />
     <title>Document</title>
-    <link rel="stylesheet" href="/dist/css/style.min.css" />
+    <link rel="stylesheet" href="/dist/css/main.min.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="item item--1">1: Orange header</div>
-      <div class="item item--2">2: Green small box 1</div>
-      <div class="item item--3">3: Violet small box 2</div>
-      <div class="item item--4">4: Pink small box 3</div>
-      <div class="item item--5">5: Blue sidebar</div>
-      <div class="item item--6">6: Brown main content</div>
-      <div class="item item--7">7: Yellow footer</div>
-      <div class="item item--8">8: darkslategray</div>
-    </div>
-
     <footer></footer>
     <script src="/dist/js/script.min.js"></script>
   </body>
