layout - grid - design

--- a/index.html
+++ b/index.html
@@ -11,8 +11,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="/dist/css/main.min.css" />
   </head>
-  <body>
-    <footer></footer>
+  <body class="container">
+    <div class="sidebar">Sidebar</div>
+ <div class="header">header</div>
+
+    <div class="realtors">top 3 realtors</div>
+    <section class="features">features</section>
+ <div class="story__pictures">story pictures</div>
+<div class="story__content">story content</div>
+ <section class="homes">homes</section>
+
+    <section class="gallery">gallery</section>
+ <footer class="footer">footer</footer>
+
     <script src="/dist/js/script.min.js"></script>
   </body>
 </html>
