--- a/index.html
+++ b/index.html
@@ -77,9 +77,223 @@
     </p>
   </div>
 </section>
- <div class="story__pictures">story pictures</div>
-<div class="story__content">story content</div>
- <section class="homes">homes</section>
+ <div class="story__pictures">
+  <img
+    src="../dist//img//story-1.jpeg"
+    alt="couple with new house"
+    class="story__img--1"
+  />
+  <img
+    src="../dist//img//story-2.jpeg"
+    alt="couple with new house"
+    class="story__img--2"
+  />
+</div>
+<div class="story__content">
+  <h3 class="heading-3 mb-sm">Hapy Customers</h3>
+  <h2 class="heading-2 heading-2--dark mb-md">
+    &ldquo;The best decision of our lives&ldquo;
+  </h2>
+  <p class="story__text">
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio
+    necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
+  </p>
+  <button class="btn">Find you own home</button>
+</div>
+ <section class="homes">
+  <div class="home">
+    <img src="../dist/img/house-1.jpeg" alt="house_1" class="home__img" />
+    <svg class="home__like">
+      <use xlink:href="../dist/img/sprite.svg#icon-heart-full"></use>
+    </svg>
+    <h5 class="home__name">Beautiful Familly House</h5>
+    <div class="home__location">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-map-pin"></use>
+      </svg>
+      <p>USA</p>
+    </div>
+    <div class="home__rooms">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-profile-male"></use>
+      </svg>
+      <p>5 rooms</p>
+    </div>
+    <div class="home__area">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-expand"></use>
+      </svg>
+      <p>325 m<sup>2</sup></p>
+    </div>
+    <div class="home__price">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-key"></use>
+      </svg>
+      <p>$ 1 200 000</p>
+    </div>
+    <button class="btn home__btn">Contact realtors</button>
+  </div>
+  <div class="home">
+    <img src="../dist/img/house-2.jpeg" alt="house_1" class="home__img" />
+    <svg class="home__like">
+      <use xlink:href="../dist/img/sprite.svg#icon-heart-full"></use>
+    </svg>
+    <h5 class="home__name">Moddern glass willa</h5>
+    <div class="home__location">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-map-pin"></use>
+      </svg>
+      <p>Kanada</p>
+    </div>
+    <div class="home__rooms">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-profile-male"></use>
+      </svg>
+      <p>6 rooms</p>
+    </div>
+    <div class="home__area">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-expand"></use>
+      </svg>
+      <p>450 m<sup>2</sup></p>
+    </div>
+    <div class="home__price">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-key"></use>
+      </svg>
+      <p>$ 2 750 000</p>
+    </div>
+    <button class="btn home__btn">Contact realtors</button>
+  </div>
+  <div class="home">
+    <img src="../dist/img/house-3.jpeg" alt="house_1" class="home__img" />
+    <svg class="home__like">
+      <use xlink:href="../dist/img/sprite.svg#icon-heart-full"></use>
+    </svg>
+    <h5 class="home__name">Cosy country house</h5>
+    <div class="home__location">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-map-pin"></use>
+      </svg>
+      <p>UK</p>
+    </div>
+    <div class="home__rooms">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-profile-male"></use>
+      </svg>
+      <p>4 rooms</p>
+    </div>
+    <div class="home__area">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-expand"></use>
+      </svg>
+      <p>350 m<sup>2</sup></p>
+    </div>
+    <div class="home__price">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-key"></use>
+      </svg>
+      <p>$ 850 000</p>
+    </div>
+    <button class="btn home__btn">Contact realtors</button>
+  </div>
+  <div class="home">
+    <img src="../dist/img/house-4.jpeg" alt="house_1" class="home__img" />
+    <svg class="home__like">
+      <use xlink:href="../dist/img/sprite.svg#icon-heart-full"></use>
+    </svg>
+    <h5 class="home__name">Large Rustical Villa</h5>
+    <div class="home__location">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-map-pin"></use>
+      </svg>
+      <p>Portugal</p>
+    </div>
+    <div class="home__rooms">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-profile-male"></use>
+      </svg>
+      <p>6 rooms</p>
+    </div>
+    <div class="home__area">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-expand"></use>
+      </svg>
+      <p>480 m<sup>2</sup></p>
+    </div>
+    <div class="home__price">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-key"></use>
+      </svg>
+      <p>$ 1 950 000</p>
+    </div>
+    <button class="btn home__btn">Contact realtors</button>
+  </div>
+  <div class="home">
+    <img src="../dist/img/house-5.jpeg" alt="house_1" class="home__img" />
+    <svg class="home__like">
+      <use xlink:href="../dist/img/sprite.svg#icon-heart-full"></use>
+    </svg>
+    <h5 class="home__name">Majestic Palace House</h5>
+    <div class="home__location">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-map-pin"></use>
+      </svg>
+      <p>Germany</p>
+    </div>
+    <div class="home__rooms">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-profile-male"></use>
+      </svg>
+      <p>18 rooms</p>
+    </div>
+    <div class="home__area">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-expand"></use>
+      </svg>
+      <p>4230 m<sup>2</sup></p>
+    </div>
+    <div class="home__price">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-key"></use>
+      </svg>
+      <p>$ 9 200 000</p>
+    </div>
+    <button class="btn home__btn">Contact realtors</button>
+  </div>
+  <div class="home">
+    <img src="../dist/img/house-6.jpeg" alt="house_1" class="home__img" />
+    <svg class="home__like">
+      <use xlink:href="../dist/img/sprite.svg#icon-heart-full"></use>
+    </svg>
+    <h5 class="home__name">Modern Familly Apartement</h5>
+    <div class="home__location">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-map-pin"></use>
+      </svg>
+      <p>Itally</p>
+    </div>
+    <div class="home__rooms">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-profile-male"></use>
+      </svg>
+      <p>3 rooms</p>
+    </div>
+    <div class="home__area">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-expand"></use>
+      </svg>
+      <p>180 m<sup>2</sup></p>
+    </div>
+    <div class="home__price">
+      <svg>
+        <use xlink:href="../dist/img/sprite.svg#icon-key"></use>
+      </svg>
+      <p>$ 600 000</p>
+    </div>
+    <button class="btn home__btn">Contact realtors</button>
+  </div>
+</section>
 
     <section class="gallery">gallery</section>
  <footer class="footer">footer</footer>
