gallery final styling

--- a/index.html
+++ b/index.html
@@ -396,7 +396,28 @@
     />
   </figure>
 </section>
- <footer class="footer">footer</footer>
+ <footer class="footer">
+  <ul class="nav">
+    <li class="nav_item">
+      <a href="#" class="nav_link">Find you dream home</a>
+    </li>
+    <li class="nav_item">
+      <a href="#" class="nav_link">Request proposal</a>
+    </li>
+    <li class="nav_item">
+      <a href="#" class="nav_link">Download home planer</a>
+    </li>
+    <li class="nav_item">
+      <a href="#" class="nav_link">Contact us</a>
+    </li>
+    <li class="nav_item">
+      <a href="#" class="nav_link">Submit your property</a>
+    </li>
+    <li class="nav_item">
+      <a href="#" class="nav_link">Come work with us!</a>
+    </li>
+  </ul>
+</footer>
 
     <script src="/dist/js/script.min.js"></script>
   </body>
