--- a/index.html
+++ b/index.html
@@ -12,8 +12,25 @@
     <link rel="stylesheet" href="/dist/css/main.min.css" />
   </head>
   <body class="container">
-    <div class="sidebar">Sidebar</div>
- <div class="header">header</div>
+    <div class="sidebar">
+  <button class="nav-btn"></button>
+</div>
+ <div class="header">
+  <img src="../dist/img/logo.png" alt="" class="header__logo" />
+  <h3 class="heading-3">Your own home:</h3>
+  <h1 class="heading-1">The ultimate personal freedom</h1>
+  <button class="btn">View our properties</button>
+  <div class="header__seenon-text">Seen on</div>
+  <div class="header__seenon-logo">
+    <img src="../dist/img/logo-bbc.png" alt="logo-bbc" /><img
+      src="../dist/img/logo-forbes.png"
+      alt="logo logo-forbes"
+    /><img
+      src="../dist/img/logo-techcrunch.png"
+      alt="logo logo-techcrunch"
+    /><img src="../dist/img/logo-bi.png" alt="logo logo-bi" />
+  </div>
+</div>
 
     <div class="realtors">top 3 realtors</div>
     <section class="features">
