finishing up the realtors page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <img src="../dist/img/logo.png" alt="" class="header__logo" />
   <h3 class="heading-3">Your own home:</h3>
   <h1 class="heading-1">The ultimate personal freedom</h1>
-  <button class="btn">View our properties</button>
+  <button class="btn header__btn">View our properties</button>
   <div class="header__seenon-text">Seen on</div>
   <div class="header__seenon-logo">
     <img src="../dist/img/logo-bbc.png" alt="logo-bbc" /><img
@@ -32,8 +32,39 @@
   </div>
 </div>
 
-    <div class="realtors">top 3 realtors</div>
-    <section class="features">
+    <div class="realtors">
+  <h3 class="heading-3">Top 3 Realtors</h3>
+  <div class="realtors__list">
+    <img
+      src="../dist/img/realtor-1.jpeg"
+      alt="realtor-1"
+      class="realtors__img"
+    />
+    <div class="realtors__details">
+      <h4 class="heading-4 heading-4--light">Erik Feinman</h4>
+      <p class="realtors__sold">245 houses sold</p>
+    </div>
+    <img
+      src="../dist/img/realtor-2.jpeg"
+      alt="realtor-2"
+      class="realtors__img"
+    />
+    <div class="realtors__details">
+      <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+      <p class="realtors__sold">212 houses sold</p>
+    </div>
+    <img
+      src="../dist/img/realtor-3.jpeg"
+      alt="realtor-3"
+      class="realtors__img"
+    />
+    <div class="realtors__details">
+      <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
+      <p class="realtors__sold">198 houses sold</p>
+    </div>
+  </div>
+</div>
+ <section class="features">
   <div class="feature">
     <svg class="feature__icon">
       <use xlink:href="/dist/img/sprite.svg#icon-global"></use>
@@ -94,7 +125,8 @@
     </p>
   </div>
 </section>
- <div class="story__pictures">
+
+    <div class="story__pictures">
   <img
     src="../dist//img//story-1.jpeg"
     alt="couple with new house"
@@ -311,8 +343,7 @@
     <button class="btn home__btn">Contact realtors</button>
   </div>
 </section>
-
-    <section class="gallery">
+ <section class="gallery">
   <figure class="gallery__item gallery__item--1">
     <img
       src="../dist/img/gal-1.jpeg"
@@ -413,7 +444,8 @@
     />
   </figure>
 </section>
- <footer class="footer">
+
+    <footer class="footer">
   <ul class="nav">
     <li class="nav__item">
       <a href="#" class="nav__link">Find you dream home</a>
